[XForms] Stop processing on instance load error. Bug 332218, r=smaug+aaronr